added service bus conn string in app_setting

--- a/OrderMngmntSystem/appsettings.json
+++ b/OrderMngmntSystem/appsettings.json
@@ -9,5 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ConStr": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ProductDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-  }
+  },
+  "ServiceBusConnectionString":""
 }
